# legal-agentic-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
.specs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/features/document-ingestion/: design.md  spec.md  tasks.md
.specs/features/document-processor/: design.md  spec.md  tasks.md
.specs/features/refactor-to-standards/: design.md  spec.md  tasks.md
api/: __init__.py  main.py  models.py
api/routes/: __init__.py  documents.py
document_loaders/: pdf_loader.py
frontend/: __init__.py
frontend/pages/: documents.py
my_agent/: __init__.py  graph.py  registry.py  state.py
my_agent/config/: settings.py
my_agent/nodes/: __init__.py  generation.py  grading.py  query_generation.py  retrieval.py  router.py  web_search.py
my_agent/rerankers/: __init__.py  base.py  cohere.py
my_agent/retrievers/: __init__.py  base.py  emsemble.py  ensemble.py  factories.py  rrf.py
my_agent/utils/: nodes.py  state.py
services/: __init__.py  document_processor.py
services/chunking/: __init__.py  legal_chunker.py
services/db/: __init__.py  graph_repository.py  repositories.py
services/embeddings/: __init__.py  generator.py
services/extractors/: __init__.py  base.py  docx_extractor.py  pdf_extractor.py  xlsx_extractor.py
services/graph/: __init__.py  extractor.py  models.py
services/storage/: __init__.py  supabase_client.py
src/: main.py
src/agents/: __init__.py  config.py  dependencies.py  graph.py  registry.py  router.py  schemas.py  state.py
src/agents/nodes/: __init__.py  generation.py  grading.py  query_generation.py  retrieval.py  router.py  web_search.py
src/agents/rerankers/: __init__.py  base.py  cohere.py
src/agents/retrievers/: __init__.py  base.py  ensemble.py  factories.py  rrf.py
src/chunking/: __init__.py  config.py  dependencies.py  service.py
src/common/: config.py  database.py  exceptions.py  models.py
src/documents/: config.py  dependencies.py  exceptions.py  models.py  processor.py  router.py  schemas.py  service.py
src/embeddings/: __init__.py  config.py  dependencies.py  service.py
src/extractors/: __init__.py  base.py  config.py  dependencies.py  docx.py  pdf.py  service.py  xlsx.py
src/storage/: __init__.py  config.py  dependencies.py  service.py
supabase/migrations/: 001_document_ingestion.sql
tests/: conftest.py
tests/unit/documents/: test_exceptions.py  test_processor_download.py  test_processor_init.py  test_processor_pdf_pipeline.py  test_processor_xlsx_pipeline.py  (+2 more)
vector_store/: faiss.py
