[project]
name = "adaptive-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "pypdf>=6.10.0",
    "supabase>=2.15.0",
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.3.6",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.5",
    "tiktoken>=0.9.0",
    "langchain-text-splitters>=1.1.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
]
